[tool.poetry]
name = "aiquality"
version = "0.1.0"
description = "Experiments on Model Testing/Explainability Algos/Tools"
authors = ["Vu Nhan <nhanitvn@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
tensorflow = "2.5.0"
Pillow = "8.2.0"
imageio = "^2.9.0"
h5py = "3.1.0"
keract = "4.5.0"
scikit-image = "0.18.2"
rdkit-pypi = "2021.3.3"
pandas = "1.3.0"
patool = "1.12"
menpo = "0.11.0"
nltk = "3.6.2"
matplotlib = "3.4.2"
saxpy = "1.0.1.dev167"
sklearn = "^0.0"
opencv-python = "4.5.1.48"
jupyter = "^1.0.0"
commitizen = "^2.17.12"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
